--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,11 @@
 {
     "name": "chameleon/hostaway",
-    "description": "A project to display developer knowledge.",
+    "description": "A project to display developer's skills.",
     "require": {
-        "doctrine/orm": "^2.6.2"
+        "doctrine/orm": "^2.6.2",
+        "slim/slim": "^4.0",
+        "guzzlehttp/psr7": "^1.7",
+        "http-interop/http-factory-guzzle": "^1.0"
     },
     "autoload": {
         "psr-0": {"": "src/"}
