--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "doctrine/orm": "^2.6.2",
         "slim/slim": "^4.0",
         "guzzlehttp/psr7": "^1.7",
-        "http-interop/http-factory-guzzle": "^1.0"
+        "http-interop/http-factory-guzzle": "^1.0",
+        "monolog/monolog": "^2.1"
     },
     "autoload": {
         "psr-0": {
